# django-models-logging

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  requrements.txt  ruff.toml  setup.py
.github/workflows/: workflow.yml
models_logging/: __init__.py  admin.py  apps.py  helpers.py  middleware.py  models.py  revisions.py  settings.py  setup.py  signals.py  utils.py
models_logging/management/commands/: delete_changes.py
models_logging/migrations/: 0001_initial.py  0002_auto_20161012_2025.py  0003_auto_20170726_1552.py  0004_auto_20171124_1445.py  0005_auto_20200804_1305.py  0006_auto_20211020_2036.py  0007_migrate_old_fields.py  0008_change_extras.py  0009_alter_change_index_together.py  0010_rename_change_content_type_object_id_content_type_object_id_and_more.py
models_logging/templates/models_logging/: change_form.html  object_history.html  revert_changes_confirmation.html  revert_revision_confirmation.html
testapp/: manage.py
testapp/testapp/: settings.py  urls.py
