[project]
name = "django-models-logging"
version = "5.2.0"
requires-python = ">=3.10"
dependencies = [
    "django>=5.2,<6.0",
    "python-dateutil",
]
description = "Add logging of models from save, delete signals"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = [
    "django", "logging", "history", "models"
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/legion-an/django-models-logging"
Issues = "https://github.com/legion-an/django-models-logging/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "/models_logging",
    "README.md",
    "LICENSE",
]
exclude = [
    "testapp",
    "ruff.toml",
    ".pycharmrc",
    ".github",
    "uv.lock",
    ".gitignore",
]

[tool.hatch.build.targets.wheel]
packages = ["models_logging"]
